# MH_online_store

./: .coverage  README.md  config.py  data_from_json.py  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_utils_py.html
src/: base_product.py  category.py  cetegory_iterator.py  mixin_str.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_mixin_str.py  test_product.py  test_utils.py
